@@ -1,6 +1,9 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+  [Enhancements]
+  - Added `init_file` option to configure whether the cache is re-initialised on starting.
+    It now defaults to false (GH#7).
 
 v0.5.3    2023-12-04 14:21:01+00:00 Europe/London (TRIAL RELEASE)
   [Enhancements]
